2007-01-22  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/script-fu/scripts/guides-new-percent.scm: replaced
	license statement according to bug #119667.

2007-01-21  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpdrawtool.[ch]: maintain an is_drawn boolean which
	indicates whether the drawn stuff is currently visible. Added
	gimp_draw_tool_is_drawn() to obtain it.

	* app/tools/gimpbrushtool.c (gimp_brush_tool_draw): don't create
	the brush outline segments for the purpose of undrawing (if we
	don't have the segments, we can hardly have drawn them before).
	Fixes artifacts when the brush is being scaled or changed.

	* app/core/gimpbrush.c: don't call brush_scale_mask() and
	brush_scale_pixmap() with zero width or height. Fixes warnings
	from these functions.

2007-01-21  Tor Lillqvist  <tml@novell.com>

	* configure.in: Add AC_MSG_RESULT([no]) to the fail branch of
	PKG_CHECK_MODULES tests to make the output from configure
	cleaner. Add proper quotes around $have_gnomevfs in a test to
	avoid "test: too many arguments" warning. Add fail branch to the
	test for dbus-glib so that it isn't a hard requirement.

2007-01-21  Michael Natterer  <mitch@gimp.org>

	* modules/controller_midi.c (midi_set_device): set the name
	of the alsa client to "GIMP" and the name of the port to 
	"GIMP MIDI Input Controller". Provides reasonable strings in
	apps which display "client::port" as well as in apps which
	display only "port".

2007-01-21  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: reworded Monitor Resolution
	section as suggested in bug #398851.

2007-01-21  Raphaël Quinet  <raphael@gimp.org>

	* app/display/gimpstatusbar.[ch]
	* app/tools/gimptool.[ch]: add optional help text at the end of
	the messages generated by gimp_statusbar_push_coords() and
	gimp_statusbar_push_length().

	* app/tools/gimpcolortool.c
	* app/tools/gimpeditselectiontool.c 
	* app/tools/gimpmovetool.c
	* app/tools/gimprectangletool.c: use the updated functions.
